change package.json vitepress work dir

--- a/website/package.json
+++ b/website/package.json
@@ -11,8 +11,8 @@
     "vue": "3.2.47"
   },
   "scripts": {
-    "docs:dev": "vitepress dev website",
-    "docs:build": "vitepress build website",
-    "docs:priview": "vitepress preview website",
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:priview": "vitepress preview"
   }
 }
