fix spelling mistake preview->preview

--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,6 @@
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:priview": "vitepress preview"
+    "docs:preview": "vitepress preview"
   }
 }
