--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -21,7 +21,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  websiteDir: "${{github.workspace}}/website"
+  websiteDir: "${{github.workspace}}"
 
 jobs:
   # Single deploy job since we're just deploying
