use ccache for window CI Rlease type

--- a/.github/workflows/update_cache.yml
+++ b/.github/workflows/update_cache.yml
@@ -1,4 +1,4 @@
-name: Compile Code Daily
+name: CI Daily
 
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -14,3 +14,8 @@ jobs:
     uses: ./.github/workflows/mac.yml
   windows:
     uses: ./.github/workflows/windows.yml
+  website:
+    uses: ./.github/workflows/website.yml
+
+# run compile daily to make the cache in github update
+# run website to keep it follow main.
